Fix and testcase for BUG#3367.